--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.App-content {
+  min-height: 100vh;
+  padding: 100px 400px;
+ }
+ .App-link {
+  cursor: pointer;
+  color: #61dafb;
+ }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
